test/parser/ast/binary_operation/bitwise_or_in_match_error.exp
Error: Unexpected token `}`, expected `->`
test/parser/ast/binary_operation/bitwise_or_in_match_error.myte:6:2
 6 |   }
   |   ^